# psyche

./: .gitignore  BACKLOG.md  CLAUDE.md  LICENSE  README.md
analysis/: BACKLOG.md  medium-map.json  pyproject.toml  score_export.py
analysis/prompts/: personality_inference.py
analysis/psyche_analysis/: __init__.py  cli.py
analysis/psyche_analysis/corpus/: __init__.py  academic.py  chatgpt.py  chatledger.py  claude_ai.py  facebook.py  manager.py  sms.py  types.py  voice_clone.py
analysis/psyche_analysis/methods/: __init__.py  empath_analysis.py  llm_claude.py
analysis/psyche_analysis/synthesis/: __init__.py  merge.py  narrative.py  persona.py  profile.py
analysis/scripts/: analyze_corpus.py  analyze_narratives.py
docs/: VALIDATION-DESIGN.md
web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/public/: profile.example.json  recover.html  seed-data.example.json
web/public/profiles/: manifest.json  ryan-v1.json  ryan-v2.json
web/public/profiles/corpus/: comparison-summary.json
web/scripts/: score-export.ts
web/src/: App.tsx
web/src/components/: LikertScale.tsx  ProfileDashboard.tsx  ProgressBar.tsx  ResultsViewer.tsx  TestRunner.tsx
web/src/instruments/: bpns-9.ts  crt-7.ts  ecr-r.ts  erq-10.ts  grit-s.ts  hexaco-60.ts  init.ts  ipip-neo-120.ts  ipip-neo-300.ts  iri-28.ts  loc-ie4.ts  ncs-18.ts  open-ended.ts  phq9-gad7.ts  registry.ts  riasec-48.ts  rosenberg.ts  sd3.ts  self-monitoring-18.ts  types.ts
web/src/scoring/: engine.ts
web/src/state/: store.ts
web/tests/: ipip-neo-120.test.ts  scoring.test.ts
