[project]
name = "psyche-analysis"
version = "0.1.0"
description = "Psychometric corpus analysis and LLM personality inference"
requires-python = ">=3.11"
dependencies = [
    "empath>=0.1.0",
    "typer[all]>=0.15.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40.0"]
ml = [
    "transformers>=4.40.0",
    "torch>=2.0.0",
]

[project.scripts]
psyche = "psyche_analysis.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["psyche_analysis"]

[tool.ruff]
line-length = 100
target-version = "py312"
